fix: 댓글 리팩토링